syntax = "proto3";
package demo.httpauth;

option go_package = "github.com/Andrew-M-C/trpc-go-demo/proto/httpauth";

import "common/metadata.proto";

message LoginRequest {
    common.Metadata metadata = 1;
    string username      = 2;
    string password_hash = 3;
}

message LoginResponse {
    int32  err_code = 1;
    string err_msg  = 2;
    Data   data     = 3;

    message Data {
        string id_ticket = 1;
    }
}

message SynchronizeRequest {
    common.Metadata metadata = 1;
}

message SynchronizeResponse {
    int32  err_code = 1;
    string err_msg  = 2;
    Data   data     = 3;

    message Data {
        int64  ts_msec  = 1; // 毫秒级时间戳
        string timezone = 2; // 时区
        string env      = 3; // 环境
    }
}

// Auth 提供 HTTP 认证接口
service Auth {
    rpc Login(LoginRequest) returns (LoginResponse); // @alias=/demo/auth/Login
    rpc Synchronize(SynchronizeRequest) returns (SynchronizeResponse); // @alias=/demo/auth/Synchronize
}
